# python-k8s-pod-fatal

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
docs/source/: conf.py  index.rst  kubernetes.pod.rst  kubernetes.rst  references.rst  usage.rst
src/kubernetes/pod/: exceptions.py
tests/: test_local.py
